--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <body>
      <header>
        <div class="header">
-          <button class="header__btn" > <img src="/FigmaStudyPakko/images/Krest.svg" alt="Krest"></button>
-          <a href="" class="header__logo"> <img src="/FigmaStudyPakko/images/LOGO.svg" alt="Logo"></a>
+            <img  id="header__btn" src="/FigmaStudyPakko/images/Krest.svg" alt="Krest">
+            <a href="" id="header__logo"> <img src="/FigmaStudyPakko/images/LOGO.svg" alt="Logo"></a>
             <div>
               <div id="header__phone" >+7(863) 000 00 00</div>
               <div id="header__city">Ростов-на-Дону</div>
@@ -22,27 +22,39 @@
        </div>
      </header>
      <main class="main">
-        <nav>
-          <ul class="nav">
-            <li class="nav__item">
-              <a href="#" class="nav__link">О клинике</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Услуги</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Специалисты</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Цена</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Контакты</a>
-            </li>
-          </ul>
-        </nav> 
-        <button class="main__btn"> Записаться на прием </button>
+        <div class="backgroundColorMain">
+          <nav>
+            <ul class="nav">
+              <li class="nav__item">
+                <a href="#" class="nav__link">О клинике</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Услуги</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Специалисты</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Цена</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Контакты</a>
+              </li>
+            </ul>
+          </nav> 
+          <button class="main__btn"> Записаться на прием </button>
+        </div>
      </main>
+     <footer class="footer">
+        <div id="footDivTitle">
+          Многопрофильная клиника для детей и взрослых
+        </div>
+        <div id="footDivText">
+          Lorem ipsum dolor sit amet, consectetur adipiscing 
+          elit, sed do eiusmod tempor
+           incididunt ut labore et dolore magna aliqua
+        </div>
+     </footer>
   </body>
 </html>
 
