--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <titl></titl>
+    <titl> </titl>
     <link rel="stylesheet" href="/FigmaStudyPakko/styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +13,7 @@
   <body>
      <header>
        <div class="header">
-            <a href="menu.html"> <img  id="header__btn" src="/FigmaStudyPakko/images/menu.svg" alt="Krest"> </a>
+            <a href="index.html"><img  id="header__btn" src="/FigmaStudyPakko/images/Krest.svg" alt="Krest"></a>
             <a href="" id="header__logo"> <img src="/FigmaStudyPakko/images/LOGO.svg" alt="Logo"></a>
             <div>
               <div id="header__phone" >+7(863) 000 00 00</div>
@@ -21,16 +21,35 @@
             </div>
        </div>
      </header>
-     <main class="main mainAdd">
+     <main class="main">
         <div class="backgroundColorMain">
-          
+          <nav>
+            <ul class="nav">
+              <li class="nav__item">
+                <a href="#" class="nav__link">О клинике</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Услуги</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Специалисты</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Цена</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Контакты</a>
+              </li>
+            </ul>
+          </nav> 
+          <button class="main__btn"> Записаться на прием </button>
         </div>
      </main>
      <footer class="footer">
-        <div class="footDivTitle">
+        <div class="footDivTitle footDivBlur">
           Многопрофильная клиника для детей и взрослых
         </div>
-        <div class="footDivText">
+        <div class="footDivText footDivBlur">
           Lorem ipsum dolor sit amet, consectetur adipiscing 
           elit, sed do eiusmod tempor
            incididunt ut labore et dolore magna aliqua
