--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <titl> </titl>
-    <link rel="stylesheet" href="/FigmaStudyPakko/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,8 +13,8 @@
   <body>
      <header>
        <div class="header">
-            <a href="index.html"><img  id="header__btn" src="/FigmaStudyPakko/images/Krest.svg" alt="Krest"></a>
-            <a href="" id="header__logo"> <img src="/FigmaStudyPakko/images/LOGO.svg" alt="Logo"></a>
+            <a href="index.html"><img  id="header__btn" src="images/Krest.svg" alt="Krest"></a>
+            <a href="" id="header__logo"> <img src="images/LOGO.svg" alt="Logo"></a>
             <div>
               <div id="header__phone" >+7(863) 000 00 00</div>
               <div id="header__city">Ростов-на-Дону</div>
